feat: 원본 인허가 데이터 구조에서 기존 API 유지